# rconsole

./: .gitignore  .gitmodules  CMakeLists.txt
include/rc/: buf.h
src/: buf.c  playground.c  plugin.c
